--- a/tests/test_rmii_tx/CMakeLists.txt
+++ b/tests/test_rmii_tx/CMakeLists.txt
@@ -30,49 +30,48 @@ foreach(PROFILE ${profile_list})
     get_json_list(${PROFILE} tx_width tx_width_list)
     message(STATUS "${tx_width_list}")
     foreach(arch ${arch_list})
-        foreach(tx_width ${tx_width_list})
-            string(JSON phy GET ${PROFILE} phy)
-            string(JSON clk GET ${PROFILE} clk)
-            string(JSON mac GET ${PROFILE} mac)
-            set(config "${mac}_${phy}_${tx_width}_${arch}")
+        string(JSON phy GET ${PROFILE} phy)
+        string(JSON mac GET ${PROFILE} mac)
+        string(JSON tx_width GET ${PROFILE} tx_width)
+        set(config "${mac}_${phy}_tx${tx_width}_${arch}")
 
-            list (FIND done_configs ${config} _index)
+        list (FIND done_configs ${config} _index)
 
-            if(${_index} EQUAL -1) # Only build if it is a new config
-                list(APPEND done_configs ${config})
-                message(STATUS "Building cfg_name: ${config}")
+        if(${_index} EQUAL -1) # Only build if it is a new config
+            list(APPEND done_configs ${config})
+            message(STATUS "Building cfg_name: ${config}")
 
-                set_app_hw_target(arch)
+            set_app_hw_target(arch)
 
-                set(APP_COMPILER_FLAGS_${config}    ${COMPILER_FLAGS_COMMON})
+            set(APP_COMPILER_FLAGS_${config}    ${COMPILER_FLAGS_COMMON})
 
-                set_app_tx_width(tx_width)
+            set_app_tx_width(tx_width)
 
 
-                string(FIND "${PROFILE}" "rt" position)
-                if(position GREATER -1)
-                    list(APPEND APP_COMPILER_FLAGS_${config} -DRT=1)
-                else()
-                    list(APPEND APP_COMPILER_FLAGS_${config} -DRT=0)
-                endif()
+            string(FIND "${PROFILE}" "rt" position)
+            if(position GREATER -1)
+                list(APPEND APP_COMPILER_FLAGS_${config} -DRT=1)
+            else()
+                list(APPEND APP_COMPILER_FLAGS_${config} -DRT=0)
+            endif()
 
-                string(FIND "${PROFILE}" "hp" position)
-                if(position GREATER -1)
-                    list(APPEND APP_COMPILER_FLAGS_${config} -DETHERNET_SUPPORT_HP_QUEUES=1)
-                else()
-                    list(APPEND APP_COMPILER_FLAGS_${config} -DETHERNET_SUPPORT_HP_QUEUES=0)
-                endif()
+            string(FIND "${PROFILE}" "hp" position)
+            if(position GREATER -1)
+                list(APPEND APP_COMPILER_FLAGS_${config} -DETHERNET_SUPPORT_HP_QUEUES=1)
+            else()
+                list(APPEND APP_COMPILER_FLAGS_${config} -DETHERNET_SUPPORT_HP_QUEUES=0)
+            endif()
 
-                if(${phy} MATCHES "rmii")
-                    list(APPEND APP_COMPILER_FLAGS_${config} -DRMII=1)
-                else()
-                    list(APPEND APP_COMPILER_FLAGS_${config} -DRMII=0)
-                endif()
+            if(${phy} MATCHES "rmii")
+                list(APPEND APP_COMPILER_FLAGS_${config} -DRMII=1)
+            else()
+                list(APPEND APP_COMPILER_FLAGS_${config} -DRMII=0)
+            endif()
 
-                XMOS_REGISTER_APP()
-                unset(APP_COMPILER_FLAGS_${config})
-            endif() # if(${_index} equal -1) # New config
-        endforeach()
+            XMOS_REGISTER_APP()
+            unset(APP_COMPILER_FLAGS_${config})
+        endif() # if(${_index} equal -1) # New config
+
     endforeach() # foreach(arch ${arch_list})
     unset(arch_list)
 endforeach() # foreach(PROFILE ${profile_list})
